--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./book_constructor.js" defer></script>
     <title>Library</title>
 </head>
 <body>
@@ -14,7 +13,7 @@
         <button class="addBookButton">
             + Add Book
         </button>
-        <div class="formContainer">
+        <div class="formContainer" id="formDiv">
             <h1>Add a Book</h1>
             <form action="" id="bookAddForm">
                 
@@ -37,4 +36,5 @@
     </main>
     <footer></footer>
 </body>
+<script src="./script.js" defer></script>
 </html>
