add logic for creating new book Object

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <button class="addBookButton">
             + Add Book
         </button>
+        <div class="cardContainer">
+            <div class="card">
+                <p class="cardTitle">This Title</p>
+                <p class="cardTitle">This Author</p>
+                <button class="cardBtn">Read</button>
+                <button class="cardBtn removeBtn">Remove</button>
+            </div>
+        </div>
         <div class="formContainer" id="formDiv">
             <h1>Add a Book</h1>
             <form action="" id="bookAddForm">
@@ -23,7 +31,7 @@
                 <input type="text" name="bookAuthor" id="author" placeholder="Author" class="input">
                 <label for="author"></label>
                 
-                <input type="number" name="bookPages" id="Pages" placeholder="Number of Pages" class="input">
+                <input type="number" name="bookPages" id="pages" placeholder="Number of Pages" class="input">
                 <label for="pages"></label>
                 <div class="isRead">
                     <p>Have you read it?</p>
