--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Library</title>
 </head>
 <body>
-    <nav class="navbar"></nav>
+    <nav class="navbar">
+        <h1>Library</h1>
+    </nav>
     <main>
         <button class="addBookButton">
             + Add Book
