add read button toggle

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <h1>Library</h1>
+        <h1 class="libraryTitle">Library</h1>
     </nav>
     <main>
         <button class="addBookButton">
